objects/BMCServiceDesk__ChatInstance__c.object
<CustomObject>
    <description>This object stores entry for every chat instance between a client and a staff user.</description>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.BMCServiceDesk__Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignedDate__c</fullName>
        <inlineHelpText>This field captures the date and time at which the chat was assigned to a staff member.</inlineHelpText>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatDetailCount__c</fullName>
        <label>Chat Detail Count</label>
        <summaryForeignKey>BMCServiceDesk__ChatDetail__c.BMCServiceDesk__FKChatInstance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatDuration__c</fullName>
        <formula>(BMCServiceDesk__ClosedDate__c - BMCServiceDesk__AssignedDate__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field captures the duration of the chat.</inlineHelpText>
        <label>Chat Duration (Minutes)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClosedDate__c</fullName>
        <inlineHelpText>This field captures the date and time at which the chat ended.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the value of the category selected for the chat instance.</description>
        <label>Category</label>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipName>PreChatCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the ID of client instantiating chat.</description>
        <label>Client</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chat_Instances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Incident of chat instance</relationshipLabel>
        <relationshipName>Incident_of_Chat_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This stores the ID of staff chatting with the client.</description>
        <label>Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chat_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OpenedDate__c</fullName>
        <inlineHelpText>This field captures the date and time at which the chat was initiated.</inlineHelpText>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__State__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <description>Stores information about status of chat.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                    <default>true</default>
                    <label>Initiated</label>
                </value>
                <value>
                    <fullName>Serviced</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WaitTime__c</fullName>
        <formula>(BMCServiceDesk__AssignedDate__c - BMCServiceDesk__OpenedDate__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field captures the time for which the client waited until a staff member was available for chat.</inlineHelpText>
        <label>Wait Time (Minutes)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Chat Instance</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__FKClient__c</columns>
        <columns>BMCServiceDesk__FKStaff__c</columns>
        <columns>BMCServiceDesk__ChatDetailCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>